# kodama-app

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
scripts/: setup.sh
tools/camera-sim/: Cargo.toml
tools/camera-sim/src/: main.rs
ui/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
ui/e2e/: app.test.ts  helpers.ts
ui/public/: pcm-worklet-processor.js
ui/src/: App.svelte  app.css  app.html
ui/src/__tests__/: App.test.ts
ui/src/lib/: index.ts  transport-ws.ts  transport.ts  types.ts
ui/src/lib/__mocks__/: transport-ws.ts
ui/src/lib/__tests__/: pcm-worklet-processor.test.ts  transport-ws.test.ts  utils.test.ts
ui/src/lib/components/: AudioMeter.svelte  AudioPlayer.svelte  CameraCard.svelte  TelemetryPanel.svelte  VideoPlayer.svelte
ui/src/lib/components/__tests__/: AudioMeter.test.ts  AudioPlayer.test.ts  Badge.test.ts  CameraCard.test.ts  Card.test.ts  TelemetryPanel.test.ts  VideoPlayer.test.ts
ui/src/lib/components/alerts/: AlertPanel.svelte
ui/src/lib/components/camera/: CameraCard.svelte  CameraList.svelte
ui/src/lib/components/layout/: Header.svelte  MobileNav.svelte  SettingsDialog.svelte  Sidebar.svelte
ui/src/lib/components/map/: CameraMarker.svelte  MapView.svelte
ui/src/lib/components/telemetry/: Sparkline.svelte  TelemetryPanel.svelte
ui/src/lib/components/timeline/: RecordingTimeline.svelte
ui/src/lib/components/ui/: Sparkline.svelte  index.ts
ui/src/lib/components/ui/button/: button.svelte  index.ts
ui/src/lib/components/ui/input/: input.svelte
ui/src/lib/components/ui/tabs/: tabs.svelte
ui/src/lib/components/ui/toggle-group/: toggle-group.svelte
ui/src/lib/stores/: alerts.svelte.ts  cameraConfig.svelte.ts  cameras.svelte.ts  settings.svelte.ts  transport.svelte.ts  videoStats.svelte.ts
ui/src/lib/stores/__tests__/: alerts.test.ts  cameraConfig.test.ts
ui/src/lib/views/: CameraView.svelte  DashboardView.svelte  LiveView.svelte
ui/src/lib/views/__tests__/: CameraView.test.ts
ui/src/pages/: Dashboard.svelte  Settings.svelte
ui/src/pages/__tests__/: Dashboard.test.ts  Settings.test.ts
ui/src/routes/: +layout.svelte  +layout.ts
