[package]
name = "kodama-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kodama desktop app - privacy-focused P2P security camera system"

[lib]
name = "kodama_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kodama = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
